shellfirm/tests/snapshots/checks__.__tests__checks__base-delete_all_cron_tasks.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "./tests/checks/base-delete_all_cron_tasks.yaml",
        test: "crontab -r",
        check_detection_ids: [
            "base:delete_all_cron_tasks",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/base-delete_all_cron_tasks.yaml",
        test: "crontab   -r",
        check_detection_ids: [
            "base:delete_all_cron_tasks",
        ],
        test_description: "match command with multiple spaces",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/base-delete_all_cron_tasks.yaml",
        test: "crontab-r",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
