shellfirm/tests/snapshots/checks__.__tests__checks__fs-delete_find_files.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
---
[
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs-delete_find_files.yaml",
        test: "find . | -delete",
        check_detection_ids: [
            "fs:delete_find_files",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs-delete_find_files.yaml",
        test: "find / | -delete",
        check_detection_ids: [
            "fs:delete_find_files",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "./tests/checks/fs-delete_find_files.yaml",
        test: "findd / | -delete",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
